[package]
name = "msp_dap_link_via_serial"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = "4.2"
rusb = "0.9"
crc = "3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
clap = { version = "4.0", features = ["derive"] }
goblin = "0.10.0"
socketioxide = "0.17.2"
serde_json = "1.0"
axum = { version = "0.8" }
tower-http = { version = "0.6.2", features = ["cors"] }
tokio = { version = "1.4", features = ["full"] }
[features]
default = ["socket"]
cli = []
socket = []